--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -16,5 +16,8 @@ jobs:
               with:
                 max_post_count: "5"
                 feed_list: "https://medium.com/feed/@nicko170"
-                template: "[$title]($url) $newline <p>$date: $description</p>"
+                template: "- [$title]($url): $description $newline"
                 date_format: "UTC:ddd yyyy-mm-dd h:MM:ss TT Z"
+                filter_comments: "medium"
+                tag_post_pre_newline: "true"
+                
