--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -21,4 +21,4 @@ jobs:
                 filter_comments: "medium"
                 tag_post_pre_newline: "true"
                 item_exec: |
-                     post.description = post.description.replace(/<\/?[^>]+(>|$)/g, ""); 
+                     post.description = post.description.replace(/<img\/?[^>]+(>|$)/g, ""); 
