--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -16,3 +16,8 @@ jobs:
               with:
                 max_post_count: "5"
                 feed_list: "https://npratley.net/feed/"
+            - run: cp README.md index.md
+            - uses: gautamkrishnar/blog-post-workflow@master
+              with:
+                max_post_count: "5"
+                feed_list: "https://npratley.net/feed/"
